2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libfs/src/dosfs/msdos_format.c: Rework to avoid overflow on 16-bit
	targets.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/open_dev_console.c: Use constant numbers to avoid
	overflow when shifting on 16-bit targets.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sapi/src/fatal.c: Formatting.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/inline/rtems/score/coremutex.inl,
	score/inline/rtems/score/coresem.inl: Eliminate use of local
	variable. This local variable causes unused variable warnings
	on some ports.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/include/rtems/score/thread.h: Revert accidentally committed
	change. It is possible that _Thread_Dispatch_disable_level can be an
	8-bit variable but this impacts assembly and must be carefully
	considered.

2009-11-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libmisc/capture/capture.h (RTEMS_CAPTURE_CONTROL_FROM_MASK): 
	Use UINT32_C(1) to avoid overflow in implict typecast on 16bit
	targets.

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* itron/src/chg_pri.c, itron/src/cre_tsk.c,
	itron/src/eventflags.c, itron/src/fmempool.c,
	itron/src/frsm_tsk.c, itron/src/itroninittasks.c,
	itron/src/itronsem.c, itron/src/mbox.c, itron/src/msgbuffer.c,
	itron/src/port.c, itron/src/rsm_tsk.c, itron/src/snd_mbx.c,
	itron/src/task.c, itron/src/vmempool.c: Eliminate TRUE/FALSE in
	favor of true/false.

2009-11-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libblock/src/bdbuf.c: Cast bdbuf->state to int32_t
	before shifting << 16 (Can not shift an enum by << 16 on 16bit).

2009-11-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_conv.c,
	libfs/src/dosfs/msdos_misc.c: Use uint16_t instead of 
	"unsigned short" to circumvent warnings on 16bit targets.

2009-11-02	Sebastian Huber <sebastian.huber@embedded-brains.de>
