@@ -104,7 +104,6 @@ void _Rate_monotonic_Update_statistics(
   /*
    *  Update the counts.
    */
-
   stats = &the_period->Statistics;
   stats->count++;
 
@@ -114,15 +113,14 @@ void _Rate_monotonic_Update_statistics(
   /*
    *  Grab basic information for time statistics.
    */
-
   #ifdef RTEMS_ENABLE_NANOSECOND_RATE_MONOTONIC_STATISTICS
-    _Timestamp_Subtract(
-      &the_period->time_at_period, &uptime, &since_last_period
+    _Timespec_Subtract(
+      &the_period->time_at_period,
+      &uptime,
+      &since_last_period
     );
-    the_period->time_at_period = uptime;
   #else
     since_last_period = _Watchdog_Ticks_since_boot - the_period->time_at_period;
-    the_period->time_at_period = _Watchdog_Ticks_since_boot;
   #endif
 
   #ifdef RTEMS_ENABLE_NANOSECOND_CPU_USAGE_STATISTICS
@@ -150,6 +148,10 @@ void _Rate_monotonic_Update_statistics(
       );
     }
   #else
+      /* partial period, cpu usage info reset while executing.  Throw away */
+      if (the_period->owner->cpu_time_used <
+          the_period->owner_executed_at_period)
+        return;
       executed = the_period->owner->cpu_time_used -
         the_period->owner_executed_at_period;
   #endif
@@ -181,6 +183,11 @@ void _Rate_monotonic_Update_statistics(
    */
 
   #ifndef RTEMS_ENABLE_NANOSECOND_RATE_MONOTONIC_STATISTICS
+
+    /* Sanity check wall time */
+    if ( since_last_period < executed )
+      since_last_period = executed;
+
     stats->total_wall_time += since_last_period;
 
     if ( since_last_period < stats->min_wall_time )
@@ -323,7 +330,7 @@ rtems_status_code rtems_rate_monotonic_period(
           /*
            *  Update statistics from the concluding period
            */
-          _Rate_monotonic_Update_statistics( the_period );
+          _Rate_monotonic_Initiate_statistics( the_period );
 
           _ISR_Enable( level );
 
